# VScode_Template

./: README.md
c_C++/: CMakeLists.txt
c_C++/src/: foo.cpp  main.cpp
c_opencv/: CMakeLists.txt  README.md
c_opencv/include/: foo.hpp
c_opencv/src/: main.cpp
c_template/: README.md
c_template/04-static-analysis/clang-analyzer/: note.txt
u_C++/: main  main.cpp
w_C++/: test.cpp
